add select field helper

--- a/app/views/events/_custom_field.html.erb
+++ b/app/views/events/_custom_field.html.erb
@@ -1,11 +1,11 @@
 <%= label_tag "event_custom_fields_label", "Label" %>
 <%= text_field_tag "event[custom_fields][][label]", custom_field.label %>
 
-<%= label_tag "event_custom_fields_type", "" %>
+<%= label_tag "event_custom_fields_type", "Field type" %>
 <%= text_field_tag "event[custom_fields][][type]", custom_field.type %>
 
-<%= label_tag "event_custom_fields_value", "" %>
+<%= label_tag "event_custom_fields_value", "Default value" %>
 <%= text_field_tag "event[custom_fields][][value]", custom_field.value %>
 
-<%= label_tag "event_custom_fields_options", "" %>
+<%= label_tag "event_custom_fields_options", "Options" %>
 <%= text_field_tag "event[custom_fields][][options]", custom_field.options %>
