--- a/app/views/events/_custom_field.html.erb
+++ b/app/views/events/_custom_field.html.erb
@@ -10,7 +10,9 @@
 <%= label_tag "event_custom_fields_options", "Options" %>
 <%= text_field_tag "event[custom_fields][][options]", custom_field.options %>
 
-<%= label_tag nil do %>
-  <%= check_box_tag "event[custom_fields][][ignore]", true %>
-  Delete
+<% if @event.persisted? %>
+  <%= label_tag nil do %>
+    <%= check_box_tag "event[custom_fields][][ignore]", true %>
+    Delete
+  <% end %>
 <% end %>
