Add new/edit/destroy features for invitees

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -36,3 +36,8 @@
     <%= link_to "Cancel event", event_path(@event), method: :delete %>
   <% end %>
 </div>
+
+<div class="invitee-section">
+  <%= render 'invitees/list' %>
+  <%= render 'invitees/form' %>
+</div>  
