Move invitee resource under the events resource

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -38,6 +38,6 @@
 </div>
 
 <div class="invitee-section">
-  <%= render 'invitees/list' %>
-  <%= render 'invitees/form' %>
+  <%= render 'events/invitees/list' %>
+  <%= render 'events/invitees/form' %>
 </div>  
