--- a/app/views/events/invitees/_form.html.erb
+++ b/app/views/events/invitees/_form.html.erb
@@ -1,12 +1,20 @@
-  <%= form_for([@event,@invitee]) do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-    
-    <%= f.label :phone_number %>
-    <%= f.text_field :phone_number %>
+<% if @invitee.errors.any? %>
+  <ul>
+    <% @invitee.errors.full_messages.each do |error_message| %>
+      <%= content_tag :li, error_message %>
+    <% end %>
+  </ul>
+<% end %>
 
-    <%= f.submit "Invite" %>
-  <% end %>
+<%= form_for([@event,@invitee]) do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  
+  <%= f.label :email %>
+  <%= f.text_field :email %>
+  
+  <%= f.label :phone_number %>
+  <%= f.text_field :phone_number %>
+
+  <%= f.submit "Invite" %>
+<% end %>
