Add record lock while registering, registrant token and implement  meaningful maximum event capacity

--- a/app/views/events/invitees/_list.html.erb
+++ b/app/views/events/invitees/_list.html.erb
@@ -8,6 +8,11 @@
         <%= link_to 'Remove', event_invitee_path(@event, invitee), 
           method: :delete, 
           confirm: "Do you want to uninvite #{invitee.name}?" %>
+        <% if invitee.registration.blank? %>
+          Pending
+        <% else %>
+          Attending
+        <% end %>
       </li>
     <% end %>
   </ul>
