--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Registrations#show</h1>
-<p>Find me in app/views/registrations/show.html.erb</p>
+<h1>Invitation Accepted</h1>
+
+<%= @event.title %><br>
+<%= @registration.name %>
