--- a/app/views/events/_custom_field.html.erb
+++ b/app/views/events/_custom_field.html.erb
@@ -1,18 +1,20 @@
 <%= label_tag "event_custom_fields_label", "Label" %>
-<%= text_field_tag "event[custom_fields][][label]", custom_field.label %>
+<%= text_field_tag "custom_fields[][label]", custom_field.label %>
 
 <%= label_tag "event_custom_fields_type", "Field type" %>
-<%= text_field_tag "event[custom_fields][][type]", custom_field.type %>
+<%= select_tag "custom_fields[][type]", 
+  options_for_select(CustomField.types.map { |c| [c.humanize, c] }, 
+    custom_field.type) %>
 
 <%= label_tag "event_custom_fields_value", "Default value" %>
-<%= text_field_tag "event[custom_fields][][value]", custom_field.value %>
+<%= text_field_tag "custom_fields[][value]", custom_field.value %>
 
 <%= label_tag "event_custom_fields_options", "Options" %>
-<%= text_field_tag "event[custom_fields][][options]", custom_field.options %>
+<%= text_field_tag "custom_fields[][options]", custom_field.options %>
 
 <% if @event.persisted? %>
   <%= label_tag nil do %>
-    <%= check_box_tag "event[custom_fields][][ignore]", true %>
+    <%= check_box_tag "custom_fields[][ignore]", true %>
     Delete
   <% end %>
 <% end %>
