--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome, to <%= COMPANY_NAME %> </h1>
 
 <%= link_to "Login with Twitter", twitter_login_path %>
+<%= link_to "Login with Facebook", facebook_login_path %>
