--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,32 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  background: image_url('squairy_light.png')
+}
+
+.jumbotron {
+  margin-top:5%;
+}
+
+.welcome {
+  font-size: 5em; 
+}
+
+/* this should probably go somewhere more global */
+.logo {
+
+}
+
+.btn:hover {
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+}
+
+.btn a {
+  color: white;
+}
+
+.btn a:hover{
+  text-decoration: none;
+}
