--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,4 +1,16 @@
-<h1>Welcome, to <%= COMPANY_NAME %> </h1>
 
-<%= link_to "Login with Twitter", twitter_login_path %>
-<%= link_to "Login with Facebook", facebook_login_path %>
+<div class="container">
+
+  <div class="jumbotron">
+    <h1 class="welcome">Welcome to <span class="logo"><%= COMPANY_NAME %></span></h1>
+
+    <button type="button" class="btn btn-primary btn-lg">
+      <%= link_to "Login with Twitter", twitter_login_path %>
+    </button>
+
+    <button type="button" class="btn btn-primary btn-lg">
+      <%= link_to "Login with Facebook", facebook_login_path %>
+    </button>
+  </div>
+
+</div> <!-- end container -->
