Style event show page

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -46,3 +46,7 @@
   <%= f.submit %>
 
 <% end %>
+
+<% unless @event.canceled? %>
+  <%= link_to "Cancel event", event_path(@event), method: :delete %>
+<% end %>
