--- a/app/views/events/invitees/_form.html.erb
+++ b/app/views/events/invitees/_form.html.erb
@@ -1,20 +1,39 @@
 <% if @invitee.errors.any? %>
-  <ul>
-    <% @invitee.errors.full_messages.each do |error_message| %>
-      <%= content_tag :li, error_message %>
-    <% end %>
-  </ul>
+  <div class="alert alert-dismissable alert-danger">
+    <button type="button" class="close" data-dismiss="alert">×</button>
+    <strong>Couldn't send invitation!</strong>
+    <%= @invitee.errors.full_messages.join(". ") %>
+  </div>
 <% end %>
 
-<%= form_for([@event,@invitee]) do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  
-  <%= f.label :email %>
-  <%= f.text_field :email %>
-  
-  <%= f.label :phone_number %>
-  <%= f.text_field :phone_number %>
 
-  <%= f.submit "Invite" %>
-<% end %>
+<div class="well">
+  <%= form_for([@event,@invitee], html: { role: "form", class: "form-horizontal" }) do |f| %>
+    <fieldset>
+      <legend>Invite a Guest</legend>
+
+      <div class="form-group">
+        <%= f.label :name, class: "control-label col-sm-3" %>
+        <div class="col-sm-9">
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :email, class: "control-label col-sm-3" %>
+        <div class="col-sm-9">
+          <%= f.text_field :email, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :phone_number, class: "control-label col-sm-3" %>
+        <div class="col-sm-9">
+          <%= f.text_field :phone_number, class: "form-control" %>
+        </div>
+      </div>
+      
+      <div class="col-sm-offset-4 col-sm-7">
+        <%= f.submit "Send Invitation", class: "btn btn-primary btn-block" %>
+      </div>
+    </fieldset>
+  <% end %>
+</div>
