--- a/app/views/events/invitees/_list.html.erb
+++ b/app/views/events/invitees/_list.html.erb
@@ -1,18 +1,27 @@
 <% if @event.invitees.persisted.any? %>
-  <ul>
+  <ul class="nav nav-pills nav-stacked">
     <% @event.invitees.each do |invitee| %>
       <% next unless invitee.id %>
-      <li>
-        <%= invitee.name %>
-        <%= link_to 'Edit', edit_event_invitee_path(@event, invitee) %>
-        <%= link_to 'Remove', event_invitee_path(@event, invitee), 
-          method: :delete, 
-          confirm: "Do you want to uninvite #{invitee.name}?" %>
-        <% if invitee.registration.blank? %>
-          Pending
-        <% else %>
-          Attending
-        <% end %>
+      <li class="dropdown">
+        <%= link_to '#', class: "dropdown-toggle", data: { toggle: "dropdown"} do %>
+          <span class="caret"></span> 
+          <%= invitee.name %>
+<!--           <% if invitee.registration.blank? %>
+            Pending
+          <% else %>
+            Attending
+          <% end %>
+ -->        <% end %>
+        <ul class="dropdown-menu">
+          <li>
+            <%= link_to 'Edit', edit_event_invitee_path(@event, invitee) %>
+          </li>
+          <li>
+            <%= link_to 'Remove', event_invitee_path(@event, invitee), 
+                    method: :delete, 
+                    confirm: "Do you want to uninvite #{invitee.name}?" %>
+          </li>
+        </ul>
       </li>
     <% end %>
   </ul>
