--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,28 +8,8 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require bootstrap.min 
+ *= require bootstrap.min
+ *= require font-awesome.min
  *= require_self
  *= require_tree .
  */
-
-
-/*
-#nav {
-  color: #444;
-  z-index: 1;
-  height: 60px;
-  width: 100%;
-  position: fixed;
-  background-color: #FFCB3F;
-  box-shadow: 0px 3px 3px rgba(0,0,0,.5);
-}
-
-.nav-section-both-borders {
-  display: inline-block;
-  height: 50px;
-  border-left: 1px solid #444;
-  border-right: 1px solid #444;
-}
-
-*/
