--- a/app/views/events/invitees/_form.html.erb
+++ b/app/views/events/invitees/_form.html.erb
@@ -32,7 +32,8 @@
       </div>
       
       <div class="col-sm-offset-4 col-sm-7">
-        <%= f.submit "Send Invitation", class: "btn btn-primary btn-block" %>
+        <%= f.submit "Send Invitation",
+          class: "btn btn-primary btn-block btn-sm" %>
       </div>
     </fieldset>
   <% end %>
