Change defaults for custom field values and options from empty array to empty string.

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -47,6 +47,6 @@
 
 <% end %>
 
-<% unless @event.canceled? %>
+<% unless @event.canceled? || @event.new_record? %>
   <%= link_to "Cancel event", event_path(@event), method: :delete %>
 <% end %>
