--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -7,13 +7,14 @@
   background: image_url('squairy_light.png');
 
   .jumbotron {
-    margin-top:10%;
+    margin-top:5%;
   }
 
   .welcome h1{
+    text-align: center;
     font-size: 3.5em;
     letter-spacing: -3px;
-    margin-bottom: 5%;
+    margin-bottom: 3%
   }
 
   .logo {
@@ -26,13 +27,20 @@
     border-radius: 10px;
   }
 
-  .blurb {
-    padding: 15px;
+  .blurb { 
+    color: #777;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-left: 1px dotted #777;
   }
 
   /* this should probably go somewhere more global */
   .btn:hover {
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
+  }
+
+  .home-buttons {
+    margin-left: -30px;
   }
 
   .btn a {
