--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Edit Event</h1>
-
+<div class="page-header">
+  <h1>
+    <span class="text-muted">
+      Edit:
+    </span>
+    <%= @event.title %>
+  </h1>
+</div>
 <%= render 'form' %>
