--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,8 +11,9 @@
     <div class="row">
       <div class="col-xs-12 col-sm-3 pull-right">
         <%= link_to "Edit event", edit_event_path(@event), class: "btn btn-sm btn-primary btn-block" %>
+        <div class="clearfix"></div>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-9">
         <%= render 'events/event_details' %>
       </div>
     </div>
@@ -24,7 +25,7 @@
   </div>
 
   <div class="col-lg-4">
-    <div class="image"><%= tag :img, src: @event.image_url, width: "100%" %></div>
+    <div class="hidden-sm hidden-xs""><%= tag :img, src: @event.image_url, width: "100%" %></div>
     <%= render 'events/counter' %>
     <%= render 'events/invitees/form' %>
     <%= render 'events/invitees/list' %>
