--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -8,9 +8,10 @@
 
   .jumbotron {
     margin-top:5%;
+    margin-bottom: 0;
   }
 
-  .welcome h1{
+  #welcome h1{
     text-align: center;
     font-size: 3.5em;
     letter-spacing: -3px;
@@ -39,7 +40,7 @@
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
   }
 
-  .home-buttons {
+  #home-buttons {
     margin-left: -30px;
   }
 
@@ -60,4 +61,18 @@
     background-color: #44969A;
   }
 
+  .homepage-events-header {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
+
+    .homepage-event {
+      li {
+        list-style: none;
+
+        .remaining-spaces{
+          /* */
+        }
+      }
+    }  
 }
