--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -8,7 +8,19 @@
 </head>
 <body id="homepage">
 
-<%= yield %>
+  <div class="row">
+    <div class="col-lg-10 col-lg-offset-1">
+
+      <% if notice %>
+        <div class="alert alert-dismissable alert-success">
+          <button type="button" class="close" data-dismiss="alert">×</button>
+          <strong><%= notice %></strong>
+        </div>
+      <% end %>
+      
+      <%= yield %>
+    </div>
+  </div>
 
 </body>
 </html>
