Create hacky system for checking remaining registrations - needs improvement

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -70,9 +70,13 @@
       li {
         list-style: none;
 
-        .remaining-spaces{
+        .remaining-spaces {
           /* */
         }
+        .remaining-spaces-warning {
+          color: red;
+        }
+
       }
     }  
 }
