--- a/app/assets/stylesheets/bootstrap-fixes.css.scss
+++ b/app/assets/stylesheets/bootstrap-fixes.css.scss
@@ -1,6 +1,9 @@
+@import "bootstrap.min";
+
+.field_with_errors { @extend .has-error; }
+
 body > .row {
   margin-left: 0;
   margin-right: 0;
   margin-top: 45px;  
 }
-
