--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -28,7 +28,7 @@
       <% else %>
         <div class="homepage-event col-lg-4 well">
       <% end %>
-        <h3><%= link_to event.title, event_path(event) %></h3>
+        <h3><%= link_to event.title, new_event_registration_path(event) %></h3>
         <ul>
           <li><%= event.occurring_on %></li>
           <li><%= event.location %></li>
@@ -36,14 +36,15 @@
             <% if event.nearly_full? %>
             <h4 class="remaining-spaces-warning">
               Only <%= pluralize(event.spaces_remaining, 'Space') %> left!
+            </h4>
             <% else %>
             <h4 class="remaining-spaces">
               <%= pluralize(event.spaces_remaining, 'Space') %> still available
             </h4>
             <% end %>
           </li>
-
         </ul>
+        <%= link_to "Register!", new_event_registration_path(event), class: "btn btn-default btn-lg btn-block" %>
       </div>
     <% end %>
   </div>
